k8s_manifestFiles/todo-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoweb
  labels:
    app: todoweb
spec:
  selector:
    app: todoweb
  ports:
    - name: http
      port: 80
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoweb 
  labels:
    name: todoweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoweb
  template:
    metadata:
      labels:
        app: todoweb
    spec:
      volumes: #静的アセット
      - name: assets
        emptyDir: {}
      containers:

      - name: nginx
        image: gihyodocker/nginx-nuxt:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/_nuxt  # ②nginx側の/var/www/_nuxtと、web側の/distをマウント。todowebの/distの内容を、nginx-nuxtへコピー
          name: assets

      - name: web 
        image: gihyodocker/todoweb:latest
        imagePullPolicy: Always
        lifecycle:
          postStart:  # ①/distディレクトリにassetsファイルがコピーされる
            exec:
              command:
              - cp
              - -R
              - /todoweb/.nuxt/dist
              - /
        ports:
        - containerPort: 3000 
        volumeMounts:
        - mountPath: /dist  # ②nginx側の/var/www/_nuxtと、web側の/distをマウント。todowebの/distの内容を、nginx-nuxtへコピー
          name: assets
