k8s_manifestFiles/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 3000
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      # volumes: #静的アセット
      #   - name: assets
      #     emptyDir: {}
      containers:
        - name: web
          image: takabunn/eng_quiz_web_image:latest # web_image
          imagePullPolicy: Always # Never
          # lifecycle:
          #   postStart: # ①/distディレクトリにassetsファイルがコピーされる
          #     exec:
          #       command:
          #         - cp
          #         - -R
          #         - /web/.nuxt/dist
          #         - /
          ports:
            - containerPort: 3000
