k8s_manifestFiles/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: web-svc
              servicePort: 3000
